<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".patient.registerNewPatient.view.RegisterNewPatientActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/yrsa_semibold"
            android:text="@string/titulo_adicionar_novo_paciente"
            android:textSize="24sp" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="ifContentScrolls"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="100dp"
                android:fontFamily="@font/yrsa"
                android:hint="@string/hint_nome" />

            <EditText
                android:id="@+id/et_cpf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/yrsa"
                android:hint="@string/hint_cpf"
                android:inputType="number" />

            <EditText
                android:id="@+id/et_dataAniversario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/yrsa"
                android:hint="@string/hint_data_de_nascimento" />

            <EditText
                android:id="@+id/et_telefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/yrsa"
                android:hint="@string/hint_telefone" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tf_tipo_sangue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="50dp"
                android:hint="@string/hint_tipo_sanguineo"
                android:paddingStart="4dp"
                android:textColorHint="#B9B6B6">

                <AutoCompleteTextView
                    android:id="@+id/auto_complete_tipo_sangue"
                    android:layout_width="match_parent"
                    android:layout_height="26dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:fontFamily="@font/yrsa"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tf_genero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="50dp"
                android:hint="@string/hint_genero"
                android:paddingStart="4dp"
                android:textColorHint="#B9B6B6">

                <AutoCompleteTextView
                    android:id="@+id/auto_complete_genero"
                    android:layout_width="match_parent"
                    android:layout_height="26dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:fontFamily="@font/yrsa"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_confirmar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="62dp"
                android:layout_marginBottom="24dp"
                android:fontFamily="@font/yrsa"
                android:text="@string/label_confirmar" />
        </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>